[package]
name = "prox-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
futures = "0.3.27"
ipnet = "2.7.2"
rayon = "1.7.0"
regex = "1"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
serde = {version="1.0.156", features=["derive"]}
serde_json = "1.0.94"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
url = "2.3.1"